--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3382,7 +3382,7 @@
         <div role="dialog" aria-label="Photo edit modal" aria-modal="true" class="modal-caption _1nvgts7s" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="_oda838" id="close-modal-caption">
-           <span class="_e296pg">
+           <span class="relative">
             <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
@@ -3526,7 +3526,7 @@
         <div role="dialog" aria-label="Add additional photos to your gallery" aria-modal="true" class="modal-add-photo _244p2lw" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="_oda838" id="close-modal-add-photo">
-           <span class="_e296pg">
+           <span class="relative">
             <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
@@ -3561,7 +3561,7 @@
                </section>
                <div class="_5dhkyy">
                 <div id="GALLERY_LIBRARY_MODAL-tabs">
-                 <div class="_e296pg">
+                 <div class="relative">
                   <div class="_1xkr92p" data-testid="tab-list-wrapper">
                    <div class="_qc3ank" role="tablist">
                     <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="_fd0fliz" role="tab">Your photos</button>
@@ -3580,7 +3580,7 @@
                        <div class="_1byskwn">
                         <div class="_1oa4lmzv">
                          <div class="_18dgbyf">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_vvli20" aria-label="Add more" role="button" tabindex="0">
@@ -3607,10 +3607,10 @@
                     <div class="_1byskwn">
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 2 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -3678,10 +3678,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 3 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -3749,10 +3749,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 4 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -3820,10 +3820,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 5 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -3891,10 +3891,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 6 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -3962,10 +3962,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 7 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4033,10 +4033,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 8 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4104,10 +4104,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 9 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4175,10 +4175,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 10 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4279,7 +4279,7 @@
         <div role="dialog" aria-label="Add additional photos to your gallery" aria-modal="true" class="modal-manage _244p2lw" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="_oda838" id="close-modal-manage">
-           <span class="_e296pg">
+           <span class="relative">
             <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
@@ -4313,7 +4313,7 @@
                </section>
                <div class="_5dhkyy">
                 <div id="GALLERY_LIBRARY_MODAL-tabs">
-                 <div class="_e296pg">
+                 <div class="relative">
                   <div class="_1xkr92p" data-testid="tab-list-wrapper">
                    <div class="_qc3ank" role="tablist">
                     <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="_fd0fliz" role="tab">Your photos</button>
@@ -4332,7 +4332,7 @@
                        <div class="_1byskwn">
                         <div class="_1oa4lmzv">
                          <div class="_18dgbyf">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <!-- <div class="_vvli20" aria-label="Add more" role="button" tabindex="0">
@@ -4359,10 +4359,10 @@
                     <div class="_1byskwn">
                      <!-- <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 2 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4430,10 +4430,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 3 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4501,10 +4501,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 4 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4572,10 +4572,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 5 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4643,10 +4643,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 6 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4714,10 +4714,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 7 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4785,10 +4785,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 8 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4856,10 +4856,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 9 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
@@ -4927,10 +4927,10 @@
                      </div>
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div role="group" aria-label="Photo 10 of 9">
                          <div class="_1fopc40">
-                          <div class="_e296pg" style="padding-bottom: 133.33%;">
+                          <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
                              <div class="_100wjs0">
