--- a/edit/what.html
+++ b/edit/what.html
@@ -1650,7 +1650,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
           <div role="dialog" aria-label="Add dish" aria-modal="true" class="_1ucy1zjv modal-options" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-options">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -3981,7 +3981,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
           <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-examples _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-examples">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
