--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -1248,7 +1248,7 @@
         <div role="dialog" aria-label="Full list of accessibility search filters" aria-modal="true" class="modal-filter-list _dsadsad" style="position: relative;">
          <div class="_pa35zs">
           <button aria-label="Close" type="button" class="_oda838" id="close-modal-filter-list">
-           <span class="_e296pg">
+           <span class="relative">
             <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
