--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6751,7 +6751,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 name="airlock_id" value="">
                                                               <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                                                                 <div class="_jro6t0">
-                                                                  <div class="_e296pg" style="flex: 1 1 0%;">
+                                                                  <div class="relative" style="flex: 1 1 0%;">
                                                                     <div role="presentation" class="_sbmagf"
                                                                       style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;">
                                                                     </div>
@@ -7021,7 +7021,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   </div>
                                                                 </div>
                                                                 <div class="_jro6t0">
-                                                                  <div class="_e296pg" style="flex: 2 1 0%;">
+                                                                  <div class="relative" style="flex: 2 1 0%;">
                                                                     <div role="presentation" class="_sbmagf"
                                                                       style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;">
                                                                     </div>
