--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3010,7 +3010,7 @@
                                               </div>
                                               <div class="_1cvivhm">
                                                 <div class="_ctz3yu">
-                                                  <div class="_e296pg">
+                                                  <div class="relative">
                                                     <div class="_v0gz4uz"
                                                       style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                       <div class="_4626ulj">
@@ -3046,7 +3046,7 @@
                                               </div>
                                               <div class="_1cvivhm">
                                                 <div class="_ctz3yu">
-                                                  <div class="_e296pg">
+                                                  <div class="relative">
                                                     <div class="_v0gz4uz"
                                                       style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                       <div class="_4626ulj">
@@ -3082,7 +3082,7 @@
                                               </div>
                                               <div class="_1cvivhm">
                                                 <div class="_ctz3yu">
-                                                  <div class="_e296pg">
+                                                  <div class="relative">
                                                     <div class="_v0gz4uz"
                                                       style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                       <div class="_4626ulj">
@@ -3629,7 +3629,7 @@
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                 <div data-key="Start-to-finish trip planning" class="_1yfus1e">
                                                   <div class="_ctz3yu">
-                                                    <div class="_e296pg">
+                                                    <div class="relative">
                                                       <div class="_v0gz4uz"
                                                         style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                         <div class="_4626ulj">
@@ -3668,7 +3668,7 @@
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                 <div data-key="300 point inspection and vetting" class="_1yfus1e">
                                                   <div class="_ctz3yu">
-                                                    <div class="_e296pg">
+                                                    <div class="relative">
                                                       <div class="_v0gz4uz"
                                                         style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                         <div class="_4626ulj">
@@ -3706,7 +3706,7 @@
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                 <div data-key="On-trip care" class="_1yfus1e">
                                                   <div class="_ctz3yu">
-                                                    <div class="_e296pg">
+                                                    <div class="relative">
                                                       <div class="_v0gz4uz"
                                                         style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                         <div class="_4626ulj">
@@ -12640,7 +12640,7 @@
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                   <div data-key="Your Renaissance retreat" class="_1yfus1e">
                                                     <div class="_ctz3yu">
-                                                      <div class="_e296pg">
+                                                      <div class="relative">
                                                         <div class="_v0gz4uz"
                                                           style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                           <div class="_4626ulj">
@@ -12680,7 +12680,7 @@
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                   <div data-key="A revered garden estate" class="_1yfus1e">
                                                     <div class="_ctz3yu">
-                                                      <div class="_e296pg">
+                                                      <div class="relative">
                                                         <div class="_v0gz4uz"
                                                           style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                           <div class="_4626ulj">
@@ -12719,7 +12719,7 @@
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                   <div data-key="Tranquil seclusion" class="_1yfus1e">
                                                     <div class="_ctz3yu">
-                                                      <div class="_e296pg">
+                                                      <div class="relative">
                                                         <div class="_v0gz4uz"
                                                           style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                           <div class="_4626ulj">
@@ -13271,7 +13271,7 @@
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="Start-to-finish trip planning" class="_1yfus1e">
                                                   <div class="_ctz3yu">
-                                                    <div class="_e296pg">
+                                                    <div class="relative">
                                                       <div class="_v0gz4uz"
                                                         style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                         <div class="_4626ulj">
@@ -13310,7 +13310,7 @@
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="300 point inspection and vetting" class="_1yfus1e">
                                                   <div class="_ctz3yu">
-                                                    <div class="_e296pg">
+                                                    <div class="relative">
                                                       <div class="_v0gz4uz"
                                                         style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                         <div class="_4626ulj">
@@ -13348,7 +13348,7 @@
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="On-trip care" class="_1yfus1e">
                                                   <div class="_ctz3yu">
-                                                    <div class="_e296pg">
+                                                    <div class="relative">
                                                       <div class="_v0gz4uz"
                                                         style="border-radius: 8px; --dls-liteimage-padding-top: 66.6667%;">
                                                         <div class="_4626ulj">
@@ -24306,7 +24306,7 @@
               style="position: relative;">
               <div class="_pa35zs">
                 <button aria-label="Close" type="button" class="_oda838" id="close-modal-msg">
-                  <span class="_e296pg">
+                  <span class="relative">
                     <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                       focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
