--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -16518,7 +16518,7 @@
           <div role="dialog" aria-label="Select dates and guests" aria-modal="true" class="_zyit6ap"
             style="position: relative;">
             <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
-                  class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                  class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                     role="presentation" focusable="false"
                     style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
                     <path d="m6 6 20 20"></path>
@@ -16558,7 +16558,7 @@
                                 <div class="_1y26gh8o">
                                   <div>
                                     <div>
-                                      <div class="_e296pg" aria-hidden="true" role="presentation">
+                                      <div class="relative" aria-hidden="true" role="presentation">
                                         <div class="_1kypzrpr" style="padding: 0px 13px;">
                                           <ul class="_xv14sf">
                                             <li class="_92xroi" style="width: 47px;">Su</li>
