--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11385,7 +11385,7 @@
                                                                                         aria-label="Move backward to switch to the previous month."
                                                                                         disabled="" type="button"
                                                                                         class="_oda838"><span
-                                                                                          class="_e296pg"><svg
+                                                                                          class="relative"><svg
                                                                                             viewBox="0 0 18 18"
                                                                                             role="presentation"
                                                                                             aria-hidden="true"
@@ -11401,7 +11401,7 @@
                                                                                         aria-label="Move forward to switch to the next month."
                                                                                         type="button"
                                                                                         class="_oda838"><span
-                                                                                          class="_e296pg"><svg
+                                                                                          class="relative"><svg
                                                                                             viewBox="0 0 18 18"
                                                                                             role="presentation"
                                                                                             aria-hidden="true"
@@ -13163,7 +13163,7 @@
                                                                             data-modal="#keyboard-shortcuts-modal"
                                                                             aria-label="Open the keyboard shortcuts panel"
                                                                             type="button" class="_1qi0sj8"><span
-                                                                              class="_e296pg"><svg viewBox="0 0 32 32"
+                                                                              class="relative"><svg viewBox="0 0 32 32"
                                                                                 xmlns="http://www.w3.org/2000/svg"
                                                                                 aria-hidden="true" role="presentation"
                                                                                 focusable="false"
@@ -27502,7 +27502,7 @@
             <div role="dialog" aria-label="Service animals" aria-modal="true" class="_1ucy1zjv"
               style="position: relative;">
               <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
-                    class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                    class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                       role="presentation" focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
                       <path d="m6 6 20 20"></path>
@@ -27905,7 +27905,7 @@
             <div role="dialog" aria-label="Select dates and guests" aria-modal="true" class="_zyit6ap"
               style="position: relative;">
               <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
-                    class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                    class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                       role="presentation" focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
                       <path d="m6 6 20 20"></path>
@@ -27945,7 +27945,7 @@
                                   <div class="_1y26gh8o">
                                     <div>
                                       <div>
-                                        <div class="_e296pg" aria-hidden="true" role="presentation">
+                                        <div class="relative" aria-hidden="true" role="presentation">
                                           <div class="_1kypzrpr" style="padding: 0px 13px;">
                                             <ul class="_xv14sf">
                                               <li class="_92xroi" style="width: 47px;">Su</li>
@@ -29272,7 +29272,7 @@
               style="position: absolute; top: 468px; right: 606.25px; transform-origin: right top;">
               <div class="_1wv4knt">
                 <button aria-label="Close" type="button" class="_oda838" id="close-modal-price-breakdown">
-                  <span class="_e296pg">
+                  <span class="relative">
                     <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                       focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
