--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -656,7 +656,7 @@
                                                                 style="opacity: 0"
                                                               >
                                                                 <button aria-label="Previous" type="button" class="_1ue05kx">
-                                                                  <span class="_e296pg"
+                                                                  <span class="relative"
                                                                     ><span class="_krjbj">_</span
                                                                     ><svg
                                                                       viewBox="0 0 32 32"
