--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -7296,7 +7296,7 @@
                                   <div class="_5neba7a">
                                     <div class="_1d1qzab"><button aria-disabled="false"
                                         aria-label="Move backward to switch to the previous month." type="button"
-                                        class="_oda838"><span class="_e296pg"><svg viewBox="0 0 18 18" role="presentation"
+                                        class="_oda838"><span class="relative"><svg viewBox="0 0 18 18" role="presentation"
                                             aria-hidden="true" focusable="false"
                                             style="height: 12px; width: 12px; display: block; fill: currentcolor;">
                                             <path
@@ -7305,7 +7305,7 @@
                                           </svg></span></button></div>
                                     <div class="_qz9x4fc"><button aria-disabled="false"
                                         aria-label="Move forward to switch to the next month." type="button" class="_oda838"><span
-                                          class="_e296pg"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
+                                          class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                                             focusable="false"
                                             style="height: 12px; width: 12px; display: block; fill: currentcolor;">
                                             <path
@@ -8174,7 +8174,7 @@
                         <div class="_5neba7a">
                           <div class="_1d1qzab"><button aria-disabled="false"
                               aria-label="Move backward to switch to the previous month." type="button"
-                              class="_oda838"><span class="_e296pg"><svg viewBox="0 0 18 18" role="presentation"
+                              class="_oda838"><span class="relative"><svg viewBox="0 0 18 18" role="presentation"
                                   aria-hidden="true" focusable="false"
                                   style="height: 12px; width: 12px; display: block; fill: currentcolor;">
                                   <path
@@ -8183,7 +8183,7 @@
                                 </svg></span></button></div>
                           <div class="_qz9x4fc"><button aria-disabled="false"
                               aria-label="Move forward to switch to the next month." type="button" class="_oda838"><span
-                                class="_e296pg"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
+                                class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                                   focusable="false"
                                   style="height: 12px; width: 12px; display: block; fill: currentcolor;">
                                   <path
@@ -8925,7 +8925,7 @@
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
         <div class="_z4lmgp">
           <div role="dialog" aria-label="Guests" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
-            <div class="_pa35zs"><button aria-label="Close" type="button" class="_oda838"><span class="_e296pg"><svg
+            <div class="_pa35zs"><button aria-label="Close" type="button" class="_oda838"><span class="relative"><svg
                     viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                     focusable="false"
                     style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -9080,7 +9080,7 @@
                         <div class="_5neba7a">
                           <div class="_1d1qzab"><button aria-disabled="true"
                               aria-label="Move backward to switch to the previous month." disabled="" type="button"
-                              class="_oda838"><span class="_e296pg"><svg viewBox="0 0 18 18" role="presentation"
+                              class="_oda838"><span class="relative"><svg viewBox="0 0 18 18" role="presentation"
                                   aria-hidden="true" focusable="false"
                                   style="height: 12px; width: 12px; display: block; fill: currentcolor;">
                                   <path
@@ -9089,7 +9089,7 @@
                                 </svg></span></button></div>
                           <div class="_qz9x4fc"><button aria-disabled="false"
                               aria-label="Move forward to switch to the next month." type="button" class="_oda838"><span
-                                class="_e296pg"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
+                                class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                                   focusable="false"
                                   style="height: 12px; width: 12px; display: block; fill: currentcolor;">
                                   <path
