--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1383,7 +1383,7 @@
           <div role="dialog" aria-label="Tasks" aria-modal="true" class="modal-show-all _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-show-all">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -1408,7 +1408,7 @@
            <div class="_12kfhdn">
             <div class="_1pzwj39">
              <div id="tabs" aria-label="tabs">
-              <div class="_e296pg">
+              <div class="relative">
                <div class="_1xkr92p" data-testid="tab-list-wrapper">
                 <div class="_qc3ank" role="tablist">
                  <button type="button" id="tab--tabs--0" aria-controls="panel--tabs--0" aria-selected="true" class="_fd0fliz" role="tab">Incomplete</button>
