--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3735,7 +3735,7 @@
           <div role="dialog" aria-label="Date range" aria-modal="true" class="_ewwxwe modal-date-range" style="position: absolute; top: 207px; left: 390.5px; transform-origin: left top;">
            <div class="_1wv4knt">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-date-range">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -3806,7 +3806,7 @@
                 <div data-plugin-in-point-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_660" data-section-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_660">
                  <div class="_pa35zs">
                   <button aria-label="Close" type="button" class="_oda838" id="close-modal-overall">
-                   <span class="_e296pg">
+                   <span class="relative">
                     <svg
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
@@ -3875,7 +3875,7 @@
                 <div data-plugin-in-point-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_662" data-section-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_662">
                  <div class="_pa35zs">
                   <button aria-label="Close" type="button" class="_oda838" id="close-modal-lower">
-                   <span class="_e296pg">
+                   <span class="relative">
                     <svg
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
