--- a/payments/payment.html
+++ b/payments/payment.html
@@ -6645,7 +6645,7 @@
                                                             >
                                                               <div class="_1wv4knt">
                                                                 <button aria-label="Close" type="button" class="_oda838">
-                                                                  <span class="_e296pg"
+                                                                  <span class="relative"
                                                                     ><svg
                                                                       viewBox="0 0 32 32"
                                                                       xmlns="http://www.w3.org/2000/svg"
@@ -10910,7 +10910,7 @@ Thank you very much and we hope you enjoy your stay!</div>
             <div class="_z4lmgp">
               <div role="dialog" aria-label="Message the Host" aria-modal="true" class="_1ucy1zjv"
                 style="position: relative;">
-                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="_e296pg"><svg
+                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="relative"><svg
                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                         focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -10982,7 +10982,7 @@ Thank you very much and we hope you enjoy your stay!</div>
             <div class="_z4lmgp">
               <div role="dialog" aria-label="Add your profile photo" aria-modal="true" class="_1ucy1zjv"
                 style="position: relative;">
-                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="_e296pg"><svg
+                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="relative"><svg
                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                         focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -11045,7 +11045,7 @@ Thank you very much and we hope you enjoy your stay!</div>
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
               <div role="dialog" aria-label="Phone number" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
-                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="_e296pg"><svg
+                <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="relative"><svg
                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                         focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -11065,7 +11065,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                   <div class="_1p7bda">We’ll send you trip updates and a text to verify this number.<div class="_1xq6rjf">
                       <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                         <div class="_jro6t0">
-                          <div class="_e296pg" style="flex: 1 1 0%;">
+                          <div class="relative" style="flex: 1 1 0%;">
                             <div role="presentation" class="_sbmagf"
                               style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;">
                             </div>
@@ -11090,7 +11090,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                           </div>
                         </div>
                         <div class="_jro6t0">
-                          <div class="_e296pg" style="flex: 1 1 0%;">
+                          <div class="relative" style="flex: 1 1 0%;">
                             <div role="presentation" class="_sbmagf"
                               style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;">
                             </div>
