--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1287,7 +1287,7 @@
          </label>
          <div class="_129y4gf">
           <button data-testid="delete-input-button" aria-label="Delete dsada" type="button" class="btn-close">
-           <span class="_e296pg">
+           <span class="relative">
             <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
