--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -1236,7 +1236,7 @@
           <div role="dialog" aria-label="Ask a Superhost" aria-modal="true" class="_5wyy9re modal-dp" style="position: absolute; top: 82px; right: 242.172px; transform-origin: right top;">
            <div class="_1wv4knt">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-dp">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -1263,7 +1263,7 @@
             <div class="_rrmdgl">
              <div class="_5kaapu">
               <button aria-label="More details" type="button" class="_oda838">
-               <span class="_e296pg">
+               <span class="relative">
                 <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
                  <path d="M3 6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
                 </svg>
@@ -1287,7 +1287,7 @@
                     <div class="_1f6woba">
                      <div class="_bc4egv">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div>
                          <div class="_1f4kzn0">
                           <div class="_1fvwakm0">
@@ -1339,7 +1339,7 @@
                           </span>
                           <span class="_c43lne">10:47 PM</span>
                          </div>
-                         <div class="_e296pg">
+                         <div class="relative">
                           <div>
                            <div class="_58izcu">
                             <div>
@@ -1378,7 +1378,7 @@
                      <div class="_hp87iag">
                       <div class="_1u4fl0k">
                        <button aria-label="Message Actions" data-testid="menu-button-MESSAGE_ACTION" type="button" class="_1yjpgde">
-                        <span class="_e296pg">
+                        <span class="relative">
                          <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: rgb(113, 113, 113);">
                           <path d="M3 6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
                          </svg>
@@ -1402,7 +1402,7 @@
                 <div class="_1icr19o" style="width: 48px;">
                  <div class="_124iqfn">
                   <button aria-label="Choose a photo from photo gallery or take a photo" data-testid="compose-bar-button-messaging__open_image_upload_dialog" type="button" class="_pfn378">
-                   <span class="_e296pg">
+                   <span class="relative">
                     <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;">
                      <path
                       d="m27 3c2.209139 0 4 1.790861 4 4v18c0 2.209139-1.790861 4-4 4h-22c-2.209139 0-4-1.790861-4-4v-18c0-2.209139 1.790861-4 4-4zm-18.11289944 16.0381317-.09420734.0831886-5.79289322 5.7926797v.086c0 1.0543618.81587779 1.9181651 1.85073766 1.9945143l.14926234.0054857h13.085l-7.8778932-7.8786797c-.36048398-.3604839-.92771504-.3882135-1.32000624-.0831886zm12.50000004-6-.0942074.0831886-7.1288932 7.1286797 6.751 6.75h6.085c1.0543618 0 1.9181651-.8158778 1.9945143-1.8507377l.0054857-.1492623v-5.585l-6.2928932-6.2936797c-.360484-.3604839-.927715-.3882135-1.3200062-.0831886zm5.6128994-8.0381317h-22c-1.1045695 0-2 .8954305-2 2v15.084l4.37867966-4.3768932c1.12470996-1.12471 2.92027284-1.1696984 4.09865104-.1349652l.1439896.1349652 1.1276797 1.1278932 7.1296797-7.1278932c1.1247099-1.12471 2.9202728-1.1696984 4.098651-.1349652l.1439896.1349652 4.8786797 4.8778932v-9.585c0-1.0543618-.8158778-1.91816512-1.8507377-1.99451426zm-19 2c1.65685425 0 3 1.34314575 3 3 0 1.6568542-1.34314575 3-3 3s-3-1.3431458-3-3c0-1.65685425 1.34314575-3 3-3zm0 2c-.55228475 0-1 .44771525-1 1 0 .5522847.44771525 1 1 1s1-.4477153 1-1c0-.55228475-.44771525-1-1-1z"
@@ -1444,7 +1444,7 @@
           <div role="dialog" aria-label="Ask a Superhost" aria-modal="true" class="modal-dp-m _iwziubj" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-dp-m">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -1471,7 +1471,7 @@
             <div class="_rrmdgl">
              <div class="_5kaapu">
               <a target="_blank" aria-label="More details" href="/messaging/thread/1257117527?thread_type=host_referral" class="_oda838">
-               <span class="_e296pg">
+               <span class="relative">
                 <svg
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
@@ -1506,7 +1506,7 @@
                     <div class="_1f6woba">
                      <div class="_bc4egv">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
-                       <div class="_e296pg">
+                       <div class="relative">
                         <div>
                          <div class="_1f4kzn0">
                           <div class="_1fvwakm0">
@@ -1558,7 +1558,7 @@
                           </span>
                           <span class="_c43lne">10:47 PM</span>
                          </div>
-                         <div class="_e296pg">
+                         <div class="relative">
                           <div>
                            <div class="_58izcu">
                             <div>
@@ -1597,7 +1597,7 @@
                      <div class="_12xty9qt">
                       <div class="_1u4fl0k">
                        <button aria-label="Message Actions" data-testid="menu-button-MESSAGE_ACTION" type="button" class="_1yjpgde">
-                        <span class="_e296pg">
+                        <span class="relative">
                          <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: rgb(113, 113, 113);">
                           <path d="M3 6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm5 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
                          </svg>
@@ -1621,7 +1621,7 @@
                 <div class="_1icr19o" style="width: 48px;">
                  <div class="_124iqfn">
                   <button aria-label="Choose a photo from photo gallery or take a photo" data-testid="compose-bar-button-messaging__open_image_upload_dialog" type="button" class="_pfn378">
-                   <span class="_e296pg">
+                   <span class="relative">
                     <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;">
                      <path
                       d="m27 3c2.209139 0 4 1.790861 4 4v18c0 2.209139-1.790861 4-4 4h-22c-2.209139 0-4-1.790861-4-4v-18c0-2.209139 1.790861-4 4-4zm-18.11289944 16.0381317-.09420734.0831886-5.79289322 5.7926797v.086c0 1.0543618.81587779 1.9181651 1.85073766 1.9945143l.14926234.0054857h13.085l-7.8778932-7.8786797c-.36048398-.3604839-.92771504-.3882135-1.32000624-.0831886zm12.50000004-6-.0942074.0831886-7.1288932 7.1286797 6.751 6.75h6.085c1.0543618 0 1.9181651-.8158778 1.9945143-1.8507377l.0054857-.1492623v-5.585l-6.2928932-6.2936797c-.360484-.3604839-.927715-.3882135-1.3200062-.0831886zm5.6128994-8.0381317h-22c-1.1045695 0-2 .8954305-2 2v15.084l4.37867966-4.3768932c1.12470996-1.12471 2.92027284-1.1696984 4.09865104-.1349652l.1439896.1349652 1.1276797 1.1278932 7.1296797-7.1278932c1.1247099-1.12471 2.9202728-1.1696984 4.098651-.1349652l.1439896.1349652 4.8786797 4.8778932v-9.585c0-1.0543618-.8158778-1.91816512-1.8507377-1.99451426zm-19 2c1.65685425 0 3 1.34314575 3 3 0 1.6568542-1.34314575 3-3 3s-3-1.3431458-3-3c0-1.65685425 1.34314575-3 3-3zm0 2c-.55228475 0-1 .44771525-1 1 0 .5522847.44771525 1 1 1s1-.4477153 1-1c0-.55228475-.44771525-1-1-1z"
@@ -1637,7 +1637,7 @@
                   <textarea class="t17tp91i t1md6muk dir dir-ltr" id="message_input" data-testid="messaging-composebar" label="Type a message" placeholder="Type a message" style="height: 40px;"></textarea>
                   <div class="sn9vk1f s1sc6kfc dir dir-ltr">
                    <button data-testid="messaging_compose_bar_send_button" aria-label="Send" type="button" class="_19kjbw4">
-                    <span class="_e296pg">
+                    <span class="relative">
                      <svg role="presentation" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="height: 24px; width: 24px; display: block; fill: currentcolor;">
                       <circle cx="12" cy="12" r="12"></circle>
                       <g clip-path="url(#clipeSendIcon23)">
@@ -1687,7 +1687,7 @@
           <div role="dialog" aria-label="Help" aria-modal="true" class="modal-help _o4zczix" style="position: relative;">
            <div class="_m4pg2z">
             <button aria-label="Close" type="button" class="_4ijurz" id="close-modal-help">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -1790,7 +1790,7 @@
           <div role="dialog" aria-label="Are you sure you want to exit?" aria-modal="true" class="modal-save-exit _1m9khubh" style="position: relative;">
            <div class="_1wv4knt">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-save-exit">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
