--- a/edit/title.html
+++ b/edit/title.html
@@ -732,7 +732,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
           <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-example _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-example">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
