--- a/help/feedback.html
+++ b/help/feedback.html
@@ -1229,7 +1229,7 @@
            <div class="c40xpfg dir dir-ltr" data-testid="search-bar-overlay-content">
             <span class="i772rby dir dir-ltr">
              <button aria-label="Close" data-testid="search-bar-overlay-close-button" type="button" class="_oda838" id="close-modal-help">
-              <span class="_e296pg">
+              <span class="relative">
                <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
               </span>
              </button>
