--- a/landing-pages/covidsafety.html
+++ b/landing-pages/covidsafety.html
@@ -2540,7 +2540,7 @@
           <div role="dialog" aria-label="Who is required to follow the new safety and cleaning guidelines?" aria-modal="true" class="modal-faq-0 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-0">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -2596,7 +2596,7 @@
           <div role="dialog" aria-label="How do I change or cancel an existing reservation?" aria-modal="true" class="modal-faq-1 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-1">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -2652,7 +2652,7 @@
           <div role="dialog" aria-label="What COVID-19 policies have been created for Airbnb Experiences?" aria-modal="true" class="modal-faq-2 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-2">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -2709,7 +2709,7 @@
           <div role="dialog" aria-label="What kind of flexible booking options are available on Airbnb?" aria-modal="true" class="modal-faq-3 _wheg71v" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-faq-3">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
