--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -557,7 +557,7 @@
                                           <div class="_14x8wq27">
                                             <div class="_1lyyzem">
                                               <button aria-label="Previous" type="button" class="_1ue05kx">
-                                                <span class="_e296pg"
+                                                <span class="relative"
                                                   ><span class="_krjbj">_</span
                                                   ><svg
                                                     viewBox="0 0 32 32"
@@ -585,7 +585,7 @@
                                             </div>
                                             <div class="_1lyyzem">
                                               <button aria-label="Next" type="button" class="_1ue05kx">
-                                                <span class="_e296pg"
+                                                <span class="relative"
                                                   ><span class="_krjbj">_</span
                                                   ><svg
                                                     viewBox="0 0 32 32"
