--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -5286,7 +5286,7 @@
                                       <div class="c1yo0219 dir dir-ltr">
                                         <div data-plugin-in-point-id="BOOK_IT_NAV" data-section-id="BOOK_IT_NAV"
                                           style="display: contents;">
-                                          <div class="_e296pg">
+                                          <div class="relative">
                                             <div class="_xkkzkj">
                                               <div class="_15tm0yy3">
                                                 <div class="_1fxck3d" data-testid="book-it-default">
