--- a/online-experience/calendar.html
+++ b/online-experience/calendar.html
@@ -377,7 +377,7 @@
                                    <div role="button" class="_owpl6c4" aria-label="Move backward to switch to the previous month.">
                                     <div class="_nztsc8l">
                                      <button aria-label="Previous" type="button" class="_oda838">
-                                      <span class="_e296pg">
+                                      <span class="relative">
                                        <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -395,7 +395,7 @@
                                    <div role="button" class="_owpl6c4" aria-label="Move forward to switch to the next month.">
                                     <div class="_13tn83am">
                                      <button aria-label="Next" type="button" class="_oda838">
-                                      <span class="_e296pg">
+                                      <span class="relative">
                                        <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
