--- a/submission/review.html
+++ b/submission/review.html
@@ -1463,7 +1463,7 @@
           <div role="dialog" aria-label="Local laws" aria-modal="true" class="modal-laws _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-laws">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -1519,7 +1519,7 @@
           <div role="dialog" aria-label="Tour guiding" aria-modal="true" class="modal-tour _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-tour">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -1578,7 +1578,7 @@
           <div role="dialog" aria-label="Animals" aria-modal="true" class="modal-animals _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-animals">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
