--- a/submission/title.html
+++ b/submission/title.html
@@ -1202,7 +1202,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
           <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-example _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-example">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
