--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1482,7 +1482,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
           <div role="dialog" aria-label="Add dish" aria-modal="true" class="_1ucy1zjv modal-options" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-options">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
@@ -3813,7 +3813,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
           <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-examples _1ucy1zjv" style="position: relative;">
            <div class="_pa35zs">
             <button aria-label="Close" type="button" class="_oda838" id="close-modal-examples">
-             <span class="_e296pg">
+             <span class="relative">
               <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
